feat(backend): add category endpoints
